<resources>
    <string name="app_name">Notefy</string>

    <string name="notes_notification_channel_id" translatable="false">note</string>
    <string name="notes_notification_channel_name">Notes</string>

    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>

    <string name="filter_title">FILTERS</string>
    <string name="tags_title">TAGS</string>
    <string name="colors_title">COLORS</string>
    <string name="icons_title">ICONS</string>

    <string name="title_hint">Title</string>
    <string name="content_hint">Content</string>

    <string name="action_pin">Pin note</string>
    <string name="action_tag">Change note tag</string>
    <string name="action_color">Change note color</string>
    <string name="action_delete">Delete note</string>

    <string name="dialog_save_title">Save note</string>
    <string name="dialog_save_content">Do you want to save changed?</string>
    <string name="dialog_save_confirm">Save</string>

    <string name="dialog_delete_title">Delete note</string>
    <string name="dialog_delete_content">Are you sure you want to delete this note?</string>
    <string name="dialog_delete_confirm">Delete</string>

    <string name="title_required">Note title must be set before saving note</string>

    <string name="dialog_saving_title">Saving…</string>

    <string name="dialog_no">No</string>

    <string name="no_notes_available">No notes available</string>

    <string name="unauthorized">You need to be logged in to create notes</string>

    <string name="online">You are now online</string>
    <string name="offline">You are currently offline</string>

    <string name="content_description_profile_icon">Profile icon</string>
    <string name="content_description_note_icon">Note icon</string>
    <string name="content_description_note_tag">Note icon</string>
    <string name="content_description_toolbar_bold">Make selected text bold</string>
    <string name="content_description_toolbar_italic">Make selected text italic</string>
    <string name="content_description_toolbar_underline">Underline selected text</string>
    <string name="content_description_toolbar_strikethrough">Strike-through selected text</string>
    <string name="content_description_toolbar_bullet">Set a bullet point on selected text</string>

    <string name="content_description_icon">Icon</string>
    <string name="content_description_pinned">Pinned</string>

    <string name="content_description_fab">Add a new note</string>

    <string-array name="tags">
        <item>ToDo</item>
        <item>Shopping</item>
        <item>Work</item>
        <item>Private</item>
        <item>School</item>
    </string-array>

    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>

</resources>

