<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_pin"
        android:orderInCategory="100"
        android:title="@string/action_pin"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_tag"
        android:icon="@drawable/ic_tag"
        android:orderInCategory="101"
        android:title="@string/action_tag"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_color"
        android:icon="@drawable/ic_palette_white"
        android:orderInCategory="102"
        android:title="@string/action_color"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white"
        android:orderInCategory="103"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

</menu>