<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="@dimen/spacing_large"
    android:descendantFocusability="beforeDescendants"
    app:cardCornerRadius="10dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/corner"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="top|end"
            android:background="@null"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_triangle" />

        <ImageView
            android:id="@+id/pin"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="top|end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:contentDescription="@string/content_description_pinned"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_pin_active" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/spacing_small">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/content_description_note_icon"
                android:padding="@dimen/spacing_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon"
                app:layout_constraintTop_toTopOf="@id/icon"
                app:layout_constraintVertical_chainStyle="packed" />

            <io.viktorot.notefy.util.KnifeTextView
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:bulletColor="@color/white"
                app:bulletGapWidth="@dimen/spacing_small"
                app:bulletRadius="2dp"
                app:layout_constraintBottom_toBottomOf="@id/icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <ImageView
                android:id="@+id/tag_img"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/content_description_note_tag"
                app:layout_constraintEnd_toStartOf="@+id/tag_text"
                app:layout_constraintStart_toEndOf="@id/icon"
                app:layout_constraintTop_toBottomOf="@id/content"
                app:srcCompat="@drawable/ic_tag" />

            <TextView
                android:id="@+id/tag_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/tag"
                app:layout_constraintBottom_toBottomOf="@id/tag_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tag_img"
                app:layout_constraintTop_toTopOf="@id/tag_img" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.cardview.widget.CardView>